--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -7,58 +7,88 @@
 </head>
 <body>
 
-
   <div class="keys">
-    <div data-key="65" class="key">
+    <div data-key="65" id="65" class="key">
+      <h1 class="sound">boom</h1>
       <kbd>A</kbd>
-      <span class="sound">clap</span>
     </div>
-    <div data-key="83" class="key">
+    <div data-key="83" id="83" class="key">
+      <h1 class="sound">kick</h1>
       <kbd>S</kbd>
-      <span class="sound">hihat</span>
     </div>
-    <div data-key="68" class="key">
+    <div data-key="68" id="68" class="key">
+      <h1 class="sound">snare</h1>
       <kbd>D</kbd>
-      <span class="sound">kick</span>
     </div>
-    <div data-key="70" class="key">
+    <div data-key="70" id="70" class="key">
+      <h1 class="sound">clap</h1>
       <kbd>F</kbd>
-      <span class="sound">openhat</span>
     </div>
-    <div data-key="71" class="key">
+    <div data-key="71" id="71" class="key">
+      <h1 class="sound">tom</h1>
       <kbd>G</kbd>
-      <span class="sound">boom</span>
     </div>
-    <div data-key="72" class="key">
+    <div data-key="72" id="72" class="key">
+      <h1 class="sound">hihat</h1>
       <kbd>H</kbd>
-      <span class="sound">ride</span>
     </div>
-    <div data-key="74" class="key">
+    <div data-key="74" id="74" class="key">
+      <h1 class="sound">open hat</h1>
       <kbd>J</kbd>
-      <span class="sound">snare</span>
     </div>
-    <div data-key="75" class="key">
+    <div data-key="75" id="75" class="key">
+      <h1 class="sound">ride</h1>
       <kbd>K</kbd>
-      <span class="sound">tom</span>
     </div>
-    <div data-key="76" class="key">
+    <div data-key="76" id="76" class="key">
+      <h1 class="sound">tink</h1>
       <kbd>L</kbd>
-      <span class="sound">tink</span>
     </div>
   </div>
 
-  <audio data-key="65" src="sounds/clap.wav"></audio>
-  <audio data-key="83" src="sounds/hihat.wav"></audio>
-  <audio data-key="68" src="sounds/kick.wav"></audio>
-  <audio data-key="70" src="sounds/openhat.wav"></audio>
-  <audio data-key="71" src="sounds/boom.wav"></audio>
-  <audio data-key="72" src="sounds/ride.wav"></audio>
-  <audio data-key="74" src="sounds/snare.wav"></audio>
-  <audio data-key="75" src="sounds/tom.wav"></audio>
+  <audio data-key="65" src="sounds/boom.wav"></audio>
+  <audio data-key="83" src="sounds/kick.wav"></audio>
+  <audio data-key="68" src="sounds/snare.wav"></audio>
+  <audio data-key="70" src="sounds/clap.wav"></audio>
+  <audio data-key="71" src="sounds/tom.wav"></audio>
+  <audio data-key="72" src="sounds/hihat.wav"></audio>
+  <audio data-key="74" src="sounds/openhat.wav"></audio>
+  <audio data-key="75" src="sounds/ride.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
 
+   function playSound(e) {
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+    if(!audio) return; // stops function from running all together
+    audio.currentTime = 0;
+    audio.play();
+    key.classList.add('playing');
+  };
+
+  function clickPlaySound() {
+    const id = this.id
+    const audio = document.querySelector(`audio[data-key="${id}"]`);
+    const key = document.querySelector(`.key[data-key="${id}"]`);
+    if(!audio) return; // stops function from running all together
+    audio.currentTime = 0;
+    audio.play();
+    key.classList.add('playing');
+  };
+
+  function removeTransition(e) {
+    if(e.propertyName !== 'transform') return; //skip it if it's not a transform
+    this.classList.remove('playing');
+  }
+
+  const keys = document.querySelectorAll('.key');
+  keys.forEach(key => {
+    key.addEventListener('transitionend', removeTransition);
+    key.addEventListener('click', clickPlaySound);
+  })
+
+  window.addEventListener('keydown', playSound);
 </script>
 
 
